# openconstruct-modular

./: AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
memory/: JOURNAL.md
openconstruct-core/: Cargo.toml
openconstruct-core/src/: lib.rs
openconstruct-runtime/: Cargo.toml
openconstruct-runtime/src/: main.rs
openconstruct-tech-agent/: Cargo.toml
openconstruct-tech-agent/src/: lib.rs
openconstruct-tech-math/: Cargo.toml
openconstruct-tech-math/src/: lib.rs
openconstruct-tech-sensor/: Cargo.toml
openconstruct-tech-sensor/src/: lib.rs
